--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
 .navegadorDerecha a {
     text-decoration: none; 
     color: #ffff;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .bottonNavegador{
@@ -46,3 +46,100 @@ header{
     border-radius: 10px; 
     cursor: pointer; 
 }
+
+/* SECCIONPRIMERA */
+
+.seccionprincipal{
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    
+}
+
+.izquierdaUno{
+    background-color: rgb(46, 37, 80);
+    color: #ffff;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+}
+
+h1{
+    font-size: 100px;
+    margin-bottom: 20px;
+}
+
+.parrafoPrimero{
+    font-size: 25px;
+    margin-bottom: 32px;
+    padding-left: 32%;
+}
+
+.botones {
+    display: flex;
+    gap: 10px;
+    padding-right: 10%;
+}
+
+.botonUno {
+    background-color:  #ffff;
+    color: pink;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.botonfeature {
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+.fondoUno{
+    background-image: url(imagenes/hojasFondo.jpg);
+    width: 50%;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+}
+
+/* IMAGEN DEL CELULAR */
+.derechaUno {
+    position: relative;
+    left: 103px;
+    top: 100px;
+}
+
+/* SECCONSEGUNDA */
+
+
+.funcionalidad{
+    width: 100%;
+}
+.tituloSegundo{
+    color: rgba(244,21,135,255);
+    text-align: center;
+    font-size: 50px;
+    padding: 30px;
+}
+
+.imagensegunda{
+    width: 50%;
+    display: flex;
+}
+
+.derechaDos{
+    width: 50%;
+}
+
+
