--- a/style.css
+++ b/style.css
@@ -121,13 +121,13 @@ h1{
 /* IMAGEN DEL CELULAR */
 .derechaUno {
     position: relative;
-    top: 38%; 
+    top: 35%; 
     left: 50px;
     
 }
 
 .derechaUno img{
-    width: 200px;
+    width: 55%;
 }
 
 /* SECCONSEGUNDA */
@@ -313,7 +313,8 @@ h1{
 .grisbotton{
     background-color: #f4f4f4;
     height: 64px;
-    border-radius: 10px
+    border-radius: 10px;
+    margin-bottom: auto;
 }
 
 footer{
@@ -353,6 +354,15 @@ footer p {
     .botones{
         margin-right: 62px;
     }
+
+    .derechaUno{
+        top: 50%;
+    }
+    .derechaUno img{
+        width: 55%;
+    }
+
+    
   
     /* FUNTIONALITIES */
     .imagensegunda img{
@@ -437,7 +447,7 @@ footer p {
     }
 
     .derechaUno{
-        top: 55%;
+        top: 42%;
         left: 21px;
     }
 
@@ -484,4 +494,114 @@ footer p {
         font-size: 14px;
     }
 
+    .decripcionDePrecio {
+        width: 88%;
+        font-size: 15px;
+    }
+
+    .contenedortarjectas{
+        gap: 10px;
+        padding: 31px 0;
+    }
+
+    .contenedortarjectas > div{
+        width: auto;
+    }
+
+    /* .grisbotton{
+        margin-top: 30px;
+    }  */
+
+    footer p {
+        margin-left: 0;
+        font-size: 15px;
+    }
+
+    footer img{
+        width: 17px;
+    }
+
+}
+
+@media(max-width: 480px){
+
+    .seccionprincipal{
+        height: 58vh;
+    }
+
+    .navegadorIzquierda img{
+        width: 100px;
+    }
+
+    .navegadorDerecha {
+        display: flex;
+        flex-direction: column;
+    }
+    .navegadorDerecha a {
+        font-size: 11px;
+    }
+
+    .navegadorDerecha nav{
+        gap: 10px;
+        margin-right: 0;
+    }
+
+    .bottonNavegador{
+        padding: 9px 6px;
+        font-size: 9px;
+    }
+
+    /* SECCIONDOS */
+
+    h1{
+        font-size: 50px;
+    }
+
+    .parrafoPrimero{
+        font-size: 23px;
+        padding-left: 2%;
+    }
+
+    .botonUno{
+        padding: 7px 11px;
+        font-size: 10px;
+    }
+
+    .botonfeature{
+        padding: 7px 11px;
+        font-size: 10px;
+    }
+
+    .derechaUno{
+        top: 49%;
+    }
+    .derechaUno img{
+        width: 106px;
+    }
+
+    /* SECCIONFUNCIONALIDADES */
+
+    .tituloSegundo{
+        font-size: 32px;
+    }
+
+    /* SECCIONPRECIOS */
+
+    .contenedortarjectas{
+        display: flex;
+        flex-direction: column;
+    }
+
+    footer{
+        padding: 14px;
+    }
+
+    footer p {
+        font-size: 13px;
+    }
+
+    .redes-sociales{
+        padding-right: 3%;
+        gap: 9px;
+    }
 }
